src/objects/inscor__Sales_Order_Line_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Customer Quote</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Solicitation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation</label>
        <referenceTo>inscor__Allocation__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Quote Line</label>
        <referenceTo>inscor__Customer_Quote_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>inscor__Invoice_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFQ Line</label>
        <referenceTo>inscor__RFQ_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>inscor__Receipt__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Line</label>
        <referenceTo>inscor__Release_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Solicitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitation</label>
        <referenceTo>inscor__Government_Solicitation__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Sales Order Line Tracking</relationshipLabel>
        <relationshipName>Sales_Order_Line_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order Line Tracking</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Action__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__Sales_Order_Line__c</columns>
        <columns>inscor__Create_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOT-{0}</displayFormat>
        <label>Sales Order Line Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Line Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>